@@ -2,6 +2,10 @@ Revision history for Class-Tiny
 
 {{$NEXT}}
 
+    [FIXED]
+
+    - "won't stay shared" bug on older perls
+
 0.008     2013-09-08 09:49:46 America/New_York
 
     [FIXED]
